fix: 前置解析的 Stream.toList 替换为 collect(Collectors.toList())
Stream.toList 为 API 34+ 方法，minSdk 26 的设备在解析前置时
会因 NoSuchMethodError 崩溃重试。